@@ -8,7 +8,6 @@
 ###############################################################################
 # Plugin Metadata
 """Run the script in the current buffer"""
-__version__ = "1.9"
 
 __author__ = "Cody Precord"
 __svnid__ = "$Id$"
@@ -27,6 +26,7 @@ import ed_glob
 import iface
 import plugin
 import ed_msg
+import profiler
 import util
 import syntax.synglob as synglob
 from ed_menu import EdMenuBar
@@ -87,6 +87,8 @@ class Launch(plugin.Plugin):
         param mainw: MainWindow Instance
 
         """
+        # Delete obsolete configuration from older versions
+        profiler.Profile_Del('Launch.Config') # New config is Launch.Config2
         tmenu = mainw.GetMenuBar().GetMenuByName("tools")
         tmenu.Insert(0, ed_glob.ID_RUN_LAUNCH, _("Run") + \
                      EdMenuBar.keybinder.GetBinding(ed_glob.ID_RUN_LAUNCH),
