@@ -8,6 +8,9 @@
 #-----------------------------------------------------------------------------#
 Version 1.10
 
+Due to a change in the underlying datamodel this update will force any existing
+configuration to be reset.
+
 +Major redesign - Adds support for all file types in Editra.
 +Fix issue in detecting files that are already open from hotspot links.
 +Fix output display truncating on NULL bytes.
